ARM32 SIGILL issue on single core CPU (not supported PLDW instruction)

XMLWordPrintable

    • b22
    • arm
    • linux

        ADDITIONAL SYSTEM INFORMATION :
        JVM crash log his available here:
        https://pastebin.com/yu13PduV

        A DESCRIPTION OF THE PROBLEM :
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # SIGILL (0x4) at pc=0x413042dc, pid=3635, tid=3636
        #
        # JRE version: LibericaJDK Runtime Environment (11.0.3+12) (build 11.0.3-BellSoft+12)
        # Java VM: LibericaJDK 32-Bit Server VM (11.0.3-BellSoft+12, mixed mode, serial gc, linux-)
        # Problematic frame:
        # J 14 c2 java.io.BufferedReader.readLine(Z)Ljava/lang/String; java.base@11.0.3-BellSoft (304 bytes) @ 0x413042dc [0x41304000+0x000002dc]
        #
        # Core dump will be written. Default location: /volume1/@%e.core
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.java.com/bugreport/crash.jsp
        #

        REGRESSION : Last worked in version 8u192


        CUSTOMER SUBMITTED WORKAROUND :
        I'm using -client as a workaround, but since -server is default, a lot of my users are having issues.

        FREQUENCY : always


              Assignee:
              Boris Ulasevich
              Reporter:
              Webbug Group
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

                Created:
                Updated:
                Resolved: