8222825: ARM32 SIGILL issue on single core CPU (not supported PLDW instruction)

Reviewed-by: dholmes, dlong